switch to mysql database orm

--- a/.gitignore
+++ b/.gitignore
@@ -167,6 +167,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+#databases data
 postgres_data
+mysql_data
 
 # End of https://www.toptal.com/developers/gitignore/api/node,windows
